force-app/main/default/objects/Twilio_Setting__mdt/Twilio_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Twilio Setting</label>
    <pluralLabel>Twilio Settings</pluralLabel>
</CustomObject>