force-app/main/default/objects/Twilio_Setting__mdt/fields/AccountSid__c.field-meta.xml
<CustomField>
    <fullName>AccountSid__c</fullName>
    <label>AccountSid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>