force-app/main/default/objects/Twilio_Setting__mdt/fields/AuthToken__c.field-meta.xml
<CustomField>
    <fullName>AuthToken__c</fullName>
    <label>Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>